--- a/pom.xml
+++ b/pom.xml
@@ -82,8 +82,14 @@
 			<version>4.0.0</version>
 		</dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
 
-	</dependencies>
+
+    </dependencies>
 
 	<build>
 		<plugins>
